# danish-asr

./: .cgcignore  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  LICENSE  README.md  commit-message.txt  mcp.json  mkdocs.yaml  pyproject.toml  tasks.py
.codex/: hooks.json
.github/: copilot-instructions.md  labeler.yml
.github/agents/: code-reviewer.agent.md
.github/workflows/: deploy_docs.yaml  docker-build.yaml  docs.yaml  docs.yml  linting.yaml  pre-commit-update.yaml  pre-commit.yaml  security_audit.yaml  tests.yaml
configs/: config.yaml
configs/data/: coral.yaml  coral_whisper.yaml  default.yaml
configs/eval/: ctc_kenlm_finetuned_hpc.yaml
configs/fairseq2/: coral_v3_danish.yaml  ctc-eval-e2-conversation.yaml  ctc-eval-e2-read-aloud.yaml  ctc-eval-e2.yaml  ctc-eval-e3-conversation.yaml  ctc-eval-e3-read-aloud.yaml  ctc-eval-e3.yaml  ctc-eval-e5.yaml  ctc-eval-e6.yaml  ctc-eval-e7.yaml  ctc-finetune-hpc-20k.yaml  ctc-finetune-hpc-e2.yaml  ctc-finetune-hpc-e3.yaml  ctc-finetune-hpc-e6.yaml  ctc-finetune-hpc-e7.yaml  ctc-finetune-hpc.yaml  ctc-finetune-local.yaml  ctc-finetune-smoke.yaml  vram-probe-1b-small.yaml  vram-probe-1b-tiny.yaml  vram-probe-1b.yaml  vram-probe-3b-tiny.yaml  vram-probe-3b.yaml
configs/fairseq2/1b/: ctc-eval-base-conversation.yaml  ctc-eval-base-read-aloud.yaml  ctc-eval-base.yaml  ctc-eval-e6-1b-conversation.yaml  ctc-eval-e6-1b-read-aloud.yaml  ctc-eval-e6-1b.yaml  ctc-finetune-hpc-e6-1b-20k.yaml  ctc-finetune-hpc-e6-1b.yaml  ctc-finetune-hpc-e8-1b-short.yaml  vram-probe-1b-tiny.yaml
configs/fairseq2/300m/: ctc-eval-base-conversation.yaml  ctc-eval-base-read-aloud.yaml  ctc-eval-base.yaml  ctc-eval-e2-conversation.yaml  ctc-eval-e2-read-aloud.yaml  ctc-eval-e3-conversation.yaml  ctc-eval-e3-read-aloud.yaml  ctc-eval-e6-conversation.yaml  ctc-eval-e6-read-aloud.yaml  ctc-eval-e6.yaml  ctc-finetune-hpc-20k.yaml  ctc-finetune-hpc-e2.yaml  ctc-finetune-hpc-e5.yaml  ctc-finetune-local.yaml
configs/fairseq2/3b/: ctc-eval-base-3b-conversation.yaml  ctc-eval-base-3b-read-aloud.yaml  ctc-eval-base-3b.yaml  ctc-eval-e6-3b-conversation.yaml  ctc-eval-e6-3b-read-aloud.yaml  ctc-eval-e6-3b.yaml  ctc-finetune-hpc-e6-3b-50k.yaml  ctc-finetune-hpc-e6-3b.yaml
configs/fairseq2/legacy/: ctc-eval-e3-conversation.yaml  ctc-finetune-hpc-e3.yaml
configs/fairseq2/llm_1b/: llm-eval-base-1b-conversation.yaml  llm-eval-base-1b-read-aloud.yaml  llm-eval-base-1b.yaml  (+6 more)
configs/hardware/: hpc.yaml  local.yaml
configs/hf_baseline/: wav2vec2_full.yaml  wav2vec2_smoke.yaml  whisper_full.yaml  whisper_smoke.yaml
configs/lm/: alexandra_proxy_hpc_s204696.yaml  alexandra_proxy_v1.yaml  coral_train_only_hpc_s204696.yaml  coral_train_only_v1.yaml
configs/model/: default.yaml  wav2vec2.yaml  whisper.yaml
configs/sweeps/: omniasr_sweep.yaml  train_sweep.yaml
configs/train/: default.yaml  wav2vec2.yaml  whisper.yaml
configs/vocab/: coral_wav2vec2_ctc.json
dockerfiles/: api.cloudrun.dockerfile  api.dockerfile  train.dockerfile  train_cuda.dockerfile
docs/: 7b-feasibility.md  cleanup-summary.md  coral-alignment-execution-plan.md  coral-dataset.md  coral-style-benchmark.md  coral-v2-dataset.md  ctc-beam-kenlm-reference.bib  ctc-beam-kenlm-reference.md  ctc-beam-kenlm-reference.tex  data-preparation.md  dtu-hpc-reference.md  dtu-hpc-setup.md  evaluation-results.md  experiment-plan.md  finetuning-recipe.md  graphify-codex-usage.md  hf-baseline-training.md  hpc-eval-validation.md  index.md  mkdocs.yaml  omniasr-coral-methodology-alignment.md  omnilingual-asr-overview.md  presentation-outline.md  project-roadmap.md  training-infrastructure.md  two-day-project-plan.md  vram-probe-plan.md
docs/archive/: DEPENDABOT_PR_REVIEW.md
docs/dtu_hpc/: 01-access.md  02-storage.md  03-lsf-jobs.md  04-python-environment.md  05-interactive-monitoring.md  README.md
graphify-out/: GRAPH_REPORT.md  cost.json  manifest.json
scripts/: build_wav2vec2_vocab.py  convert_coral_to_parquet.py  decode_ctc_with_lm.py  evaluate_ctc_predictions.py  render_results_table.py  upload_checkpoints.py
scripts/hpc/: 01_verify_data.sh  02_convert_fairseq2.sh  03_train.sh  04_eval.sh  04_train_e2.sh  05_smoke_test.sh  05_train_e3.sh  06_smoke_test_val.sh  06_sweep.sh  06_vram_probe.sh  06a_vram_probe_1b.sh  06b_vram_probe_1b_small.sh  06c_vram_probe_1b_tiny.sh  06d_vram_probe_3b.sh  06e_vram_probe_3b_tiny.sh  07_train_wav2vec2.sh  08_train_whisper.sh  09_smoke_wav2vec2.sh  10_smoke_whisper.sh  10_train_e5.sh  11_eval_e2.sh  12_eval_e3.sh  13_train_e7.sh  14_train_e6.sh  15_eval_e5.sh  16_eval_e6.sh  17_eval_e7.sh  benchmark_coral_style.py  benchmark_coral_style_alexandra_matrix.sh  benchmark_coral_style_decoder_analysis.sh  benchmark_coral_style_matrix.sh  benchmark_ctc_kenlm_alpha_beta_probe.sh  benchmark_ctc_kenlm_my_method.sh  build_kenlm.sh  build_lm_corpus.sh  check_ctc_kenlm_eval_ready.py  collect_ctc_kenlm_results.py  common.py  convert_to_fairseq2.py  ctc_kenlm_smoke_beam_lm.sh  (+26 more)
scripts/lm/: __init__.py  build_danish_lm_corpus.py  build_kenlm.py  build_pyctcdecode_unigrams.py
src/danish_asr/: __init__.py  api.py  coral_benchmark.py  data.py  evaluate.py  feedback_store.py  lm.py  losses.py  metrics.py  model.py  preprocessing.py  sweep_best.py  sweep_train.py  text.py  train.py  utils.py  wandb_storage.py
tasks/: assets.py  core.py  data.py  deploy.py  docker.py  docs.py  dvc_tasks.py  eval.py  git_tasks.py  monitor.py  quality.py  train.py  utils.py
tests/: conftest.py  test_api.py  test_coral_benchmark.py  test_ctc_kenlm_eval_ready.py  test_data.py  test_decode_ctc_with_lm.py  test_hpc_run_eval.py  test_hpc_run_training.py  test_hpc_warning_filtering.py  test_llm_eval_configs.py  test_lm.py  test_lm_decode.py  test_metrics.py  test_model.py  test_parquet_conversion.py  test_prepare_parquet_subset_eval.py  test_preprocessing.py  test_render_results_table.py  test_resolve_fairseq2_asset_path.py  test_text.py  test_tokenizer_cache.py  test_train.py  test_train_tasks.py  test_utils.py  test_wandb_storage.py  test_wav2vec2_vocab.py
(+56 files in other folders)
